  folder should take care of most of the migration (but use it at your
  own risk). Note that if you have your own modules named
  ~Data.Geometry.MyModule~ they will also get renamed to
  ~Geometry.MyModule~ (You would still have to move the actual files
  from the appropriate subfolder though).

  #+begin_src sh
  find . -type f -exec sed -i 's/Data.Geometry/Geometry/g' {} \;
  #+end_src

** 0.14

- Allow the associated/extra data of linesegments and intervals to
  differ when testing for intersections.
- Intersection testing between line segments and rectangles
- Removed proxy arguments to PlaneGraph and PlanarSubdivision
- Computing the OuterFaceDart in a PlaneGraph now only requires an ~Num r~
  constraint rather than a ~Fractional r~ constraint.
- Testing if lines and/or line segments intersect no longer requires a
  Fractional constraint; Num is sufficient. However, in turn we now do
  need Ord rather than just Eq. That seemed a worthwile tradeoff though.
- Cleaning up the public API by hiding several internal modules.
- Introduced the 'HasSquaredEuclideanDistance' class describing
  geometry types for which we can compute the squared distance from a
  point to a geometry, and added instances for some of the basic
  geometries.
- Fixed a bug in computing lengths to open line segments.
- Removed some proxy arguments, in e.g. Data.Geometry.Point.coord,
  rather than take a Proxy to specify which coordinate we want, use
  type applications.
- Support for GHC 9.0 and 9.2
- Better support for open-ended line segments in the Bentley Ottmann
  line segment intersection algorithm.

** 0.13

- Moved 'intersects' from the HasIntersectionWith class into a new
  class IsIntersectableWith. This allows separate (weaker) constraints
  for checking *if* geometries intersect rather than computing exact
  intersections.
- New BezierSpline features.
- "Zoom to fit" transformation.
- Many fixes related to PlaneGraph/PlanarSubdivison; i.e. bugs in