@@ -262,7 +262,7 @@ library
                     Algorithms.Geometry.ClosestPair.Naive
                     Algorithms.Geometry.ClosestPair.DivideAndConquer
 
-                    Algorithms.Geometry.LinearProgramming.Types
+                    Algorithms.Geometry.LinearProgramming
                     Algorithms.Geometry.LinearProgramming.LP2DRIC
 
                     Algorithms.Geometry.RedBlueSeparator.RIC
@@ -297,6 +297,8 @@ library
                     Algorithms.Geometry.SmallestEnclosingBall.Types
 
                     Algorithms.Geometry.WSPD.Types
+
+                    Algorithms.Geometry.LinearProgramming.Types
 
                     Geometry.Vector.VectorFamilyPeano
 
