@@ -40,6 +40,10 @@
   find . -type f -exec sed -i 's/Data.Geometry/Geometry/g' {} \;
   #+end_src
 
+- Added a module ~Algorithms.Geometry.LinearProgramming~ that exposes
+  the interface for linear programming. Hidden the
+  ~Algorithms.Geometry.LinearProgramming.Types~ module.
+
 ** 0.14
 
 - Allow the associated/extra data of linesegments and intervals to
